# test_eye_opener

./: README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
eye-opener/: manage.py
eye-opener/eyeopener/: asgi.py
eye-opener/render/templates/render/: index.html
eyeopener/: settings.py  urls.py  wsgi.py
