[tool.poetry]
name = "eyeopener"
version = "0.1.0"
description = ""
authors = ["SariNeverfinal <sari@neverfinal.com>"]
readme = "README.md"
packages = [{include = "eyeopener"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
